# gittutorial

./: MANIFEST.in  README.org  README.rst  pyproject.toml
docs/: git_basics.org  preparation.org  tutorial.org
src/gittutorial/: __init__.py  module.py
