[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gittutorial"
dynamic = ["version"]
requires-python = ">= 3.8"
authors = [
    {name="sugayu"}
]
description = "Git Tutorial Package."
readme = "README.rst"
license = {text = "MIT License"}
dependencies = [
    "numpy"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "gittutorial._version.__version__"}

[tool.black]
skip-string-normalization = true
